# kaywe_webapp

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/routes/: api.py
frontend/: index.html  package.json
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: BookingCard.vue  HeroSection.vue  Navbar.vue  SetListCard.vue
